[Feat]: Nuevo manejo para la tabla publication_category
